--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ var giveApiSettings = {"root":"https:\/\/ecoworld.premiumthemes.in\/wp-json\/giv
 <li id="menu-item-464" class="ecoworld-mega-menu menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-464"><a href="#"><span>Mission</span></a>
 </li>
 
-<li id="menu-item-433" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-433"><a href="https://ecoworld.premiumthemes.in/blog/"><span>Blog</span></a>
+<li id="menu-item-433" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-433"><a href="#"><span>Blog</span></a>
 
 </li>
 <li id="menu-item-465" class="ecoworld-mega-menu menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-465"><a href="#"><span>Contact Us</span></a>
@@ -291,10 +291,6 @@ var giveApiSettings = {"root":"https:\/\/ecoworld.premiumthemes.in\/wp-json\/giv
 														<div class="widget_shopping_cart_content"></div>
 													</div>
 												</div>
-
-
-							 					<span class="ecoworld_h_search_icon"><i class="fa fa-search"></i></span>
-
 
 							 					<span class="ecoworld_header_donate_btn"><a href="http://ecoworld.premiumthemes.in/donation/">DONATE</a></span>
 
@@ -1039,7 +1035,7 @@ var giveApiSettings = {"root":"https:\/\/ecoworld.premiumthemes.in\/wp-json\/giv
 <li id="menu-item-546" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-546"><a href="https://ecoworld.premiumthemes.in/about-us/">About Us</a></li>
 <li id="menu-item-223" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-223"><a href="https://ecoworld.premiumthemes.in/causes/">Causes</a></li>
 <li id="menu-item-225" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-225"><a href="https://ecoworld.premiumthemes.in/portfolio/">Portfolio</a></li>
-<li id="menu-item-221" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-221"><a href="https://ecoworld.premiumthemes.in/blog/">Blog</a></li>
+<li id="menu-item-221" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-221"><a href="#">Blog</a></li>
 <li id="menu-item-547" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-547"><a href="https://ecoworld.premiumthemes.in/contact-us-2/">Contact Us</a></li>
 </ul>			</div>
 
